include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL void YMatrix_GetCompressedYMatrix(uint16_t factor, uint32_t *nBus, uint32_t *nNz, int32_t **ColPtr, int32_t **RowIdxPtr, double **cValsPtr);
    ALTDSS_CAPI_DLL void YMatrix_ZeroInjCurr(void);
    ALTDSS_CAPI_DLL void YMatrix_GetSourceInjCurrents(void);
    ALTDSS_CAPI_DLL void YMatrix_GetPCInjCurr(void);
    ALTDSS_CAPI_DLL void YMatrix_BuildYMatrixD(int32_t BuildOps, int32_t AllocateVI);
    ALTDSS_CAPI_DLL void YMatrix_AddInAuxCurrents(int32_t SType);
    ALTDSS_CAPI_DLL void YMatrix_getIpointer(double **IvectorPtr);
    ALTDSS_CAPI_DLL void YMatrix_getVpointer(double **VvectorPtr);
    ALTDSS_CAPI_DLL int32_t YMatrix_SolveSystem(double *NodeVPtr);
    ALTDSS_CAPI_DLL void YMatrix_Set_SystemYChanged(uint16_t arg);
    ALTDSS_CAPI_DLL uint16_t YMatrix_Get_SystemYChanged(void);
    ALTDSS_CAPI_DLL void YMatrix_Set_UseAuxCurrents(uint16_t arg);
    ALTDSS_CAPI_DLL uint16_t YMatrix_Get_UseAuxCurrents(void);
    /*! 
    Update and return the convergence flag. Used for external solver loops.
    */
    ALTDSS_CAPI_DLL uint16_t YMatrix_CheckConvergence(void);
    ALTDSS_CAPI_DLL void YMatrix_SetGeneratordQdV(void);
    ALTDSS_CAPI_DLL uint16_t YMatrix_Get_LoadsNeedUpdating(void);
    ALTDSS_CAPI_DLL void YMatrix_Set_LoadsNeedUpdating(uint16_t Value);
    ALTDSS_CAPI_DLL uint16_t YMatrix_Get_SolutionInitialized(void);
    ALTDSS_CAPI_DLL void YMatrix_Set_SolutionInitialized(uint16_t Value);
    ALTDSS_CAPI_DLL int32_t YMatrix_Get_Iteration(void);
    ALTDSS_CAPI_DLL void YMatrix_Set_Iteration(int32_t Value);
    ALTDSS_CAPI_DLL void *YMatrix_Get_Handle(void);
    ALTDSS_CAPI_DLL void YMatrix_Set_SolverOptions(uint64_t opts);
    ALTDSS_CAPI_DLL uint64_t YMatrix_Get_SolverOptions(void);